Fix: text overflow in app and accounts cards

--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -16,5 +16,8 @@ main
     > *
     {
         text-align: start;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
 }
