--- a/src/app/account/settings/settings.component.scss
+++ b/src/app/account/settings/settings.component.scss
@@ -41,6 +41,9 @@ main
     .app
     {
         text-align: start;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
 }
 
